{
    "version": 1,
    "name": "P1Inputs 1",
    "maps": [
        {
            "name": "Player",
            "id": "24f02e65-c620-48e0-93cc-29e7ce41268c",
            "actions": [
                {
                    "name": "LeftStickVertical",
                    "type": "Value",
                    "id": "9501be38-57a4-45bf-8fc6-afc08665b3ac",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftStickHorizontal",
                    "type": "Value",
                    "id": "6aab68aa-c935-44cb-8124-e652f068f875",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightStickHorizontal",
                    "type": "Value",
                    "id": "f1b18382-cba8-48e5-9af2-f2c6b422853c",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightStickVertical",
                    "type": "Value",
                    "id": "3447d09a-f340-4379-9ba4-add1ccbd61bd",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftUp",
                    "type": "Button",
                    "id": "565122ac-a735-4491-88c3-1d9dd3e73171",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftDown",
                    "type": "Button",
                    "id": "891e220b-44a6-4f69-867e-984f7ceada31",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftLeft",
                    "type": "Button",
                    "id": "711760b9-36d8-46db-ad7b-eb2aec857c32",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftRight",
                    "type": "Button",
                    "id": "62c450f6-de4e-48cd-916f-a8fbc9577885",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightUp",
                    "type": "Button",
                    "id": "d2ba116f-c8c9-4f43-8686-c34612a4b232",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightLeft",
                    "type": "Button",
                    "id": "e43440fd-bbab-4296-9e1c-1ff6d1be5d77",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightRight",
                    "type": "Button",
                    "id": "d9686b6f-62a7-4b1f-87dc-62a4a439816a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightDown",
                    "type": "Button",
                    "id": "24c54e83-8872-4880-b678-5671d9d2cef9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftShoulder",
                    "type": "Button",
                    "id": "ba2b0a01-0910-4d99-bd51-c2fa572c636e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftTrigger",
                    "type": "Button",
                    "id": "962113fe-33a3-465b-84db-a1eca5c9419a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightTrigger",
                    "type": "Button",
                    "id": "e09d36df-c889-4bfd-9a49-08ce6e69c690",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightShoulder",
                    "type": "Button",
                    "id": "e78925b9-bbd8-4e5d-8311-75d8f13db252",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "87bc73c6-2384-4b49-a97a-94a70b0c4ba5",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftStickVertical",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "6455b363-00e0-46ff-8dd6-5e96f38ca2bb",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftStickVertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "475c3524-5cf0-4be8-8486-4e9cd81e5f2e",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftStickVertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "f3cb47a3-e337-4bbe-a77b-678041cd85af",
                    "path": "<Gamepad>/leftStick/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftStickVertical",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b210c3bc-a913-4da4-bd88-5fe400fecd5d",
                    "path": "<HID::Thrustmaster Thrustmaster dual analog 3.2>/stick/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftStickVertical",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "71be1402-cb28-41a1-9f54-a63d3c7f43c4",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftStickHorizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "38e8e61e-6667-4fe3-8c51-d176fc6c6a22",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftStickHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "d184c955-8a92-493c-8716-862cc344b1ee",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftStickHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "76db84d5-b383-4ce1-885a-17b7e70c0128",
                    "path": "<Gamepad>/leftStick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftStickHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "67fa1fb4-924d-47da-8781-11e9b1a96684",
                    "path": "<HID::Thrustmaster Thrustmaster dual analog 3.2>/stick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftStickHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5e9efc96-975c-4df6-9f75-180321ea7d2b",
                    "path": "<Gamepad>/rightStick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightStickHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d6076300-e5ff-42ee-8947-f7650a146b4c",
                    "path": "<HID::Thrustmaster Thrustmaster dual analog 3.2>/rz",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightStickHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f5b86c52-241c-4ba8-9961-4d60738c7c91",
                    "path": "<Gamepad>/rightStick/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightStickVertical",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c27ad638-b684-4335-a68e-319da43d1609",
                    "path": "<HID::Thrustmaster Thrustmaster dual analog 3.2>/slider",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightStickVertical",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e6e43cbf-5ba8-422f-b42c-c844dddfca9a",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "50323bd2-59c1-4c8f-a8b4-5166c1848b96",
                    "path": "<HID::Thrustmaster Thrustmaster dual analog 3.2>/hat/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "557be82a-948e-4ca2-8900-60c623527f48",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "094a962a-cb25-4946-921c-0574428f81c3",
                    "path": "<HID::Thrustmaster Thrustmaster dual analog 3.2>/hat/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "83192e99-2c38-4d3f-9ee7-7b6218d9e3a3",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b62ef078-296c-40fb-8355-d32b6ff9ccd1",
                    "path": "<HID::Thrustmaster Thrustmaster dual analog 3.2>/hat/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "494b46e7-99f1-4598-9fba-d2a1962a22fb",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "05c1e2ca-bcbb-4e9e-bff5-8a29e339a540",
                    "path": "<HID::Thrustmaster Thrustmaster dual analog 3.2>/hat/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6f6a2a50-de35-4ffe-ac84-fe76c069ce4d",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c93dfcd8-c5be-4f8e-bac1-02c3c9e3f2fa",
                    "path": "<HID::Thrustmaster Thrustmaster dual analog 3.2>/button4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d4b02c22-d633-452e-86a3-a37ce83b1d8a",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "304ab608-86e8-4636-95ca-0c33230c3210",
                    "path": "<HID::Thrustmaster Thrustmaster dual analog 3.2>/button2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e1437ffa-af07-4f0c-9f80-b264c4ad4640",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c9562dd0-de0f-45ab-aa2b-438450b6b00e",
                    "path": "<HID::Thrustmaster Thrustmaster dual analog 3.2>/button3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5ec64a05-c330-4016-813a-4978900b15f4",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8c554a90-493e-4f66-8b18-a3c43f262005",
                    "path": "<HID::Thrustmaster Thrustmaster dual analog 3.2>/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c010bfae-6d03-4ad9-bdbe-3a8ad463d6de",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftShoulder",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "49a54d8c-42f5-4a77-beee-9900832faeb7",
                    "path": "<HID::Thrustmaster Thrustmaster dual analog 3.2>/button5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftShoulder",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "057d4b1d-497a-4112-a1a2-a08c6bc09e95",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftTrigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "374e3333-a932-47f0-8f28-6042555a0340",
                    "path": "<HID::Thrustmaster Thrustmaster dual analog 3.2>/button6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftTrigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "54985569-129d-4c0f-8ebf-87aaf084a22c",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightTrigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "50fffa9c-001d-4d08-8ae8-5e70ffb17898",
                    "path": "<HID::Thrustmaster Thrustmaster dual analog 3.2>/button8",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightTrigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1c9531e1-c69b-4d5f-bb93-a9d185fe86e9",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightShoulder",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "79b262c7-c5c3-4354-8dcc-6c6e3c819818",
                    "path": "<HID::Thrustmaster Thrustmaster dual analog 3.2>/button7",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightShoulder",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}